feat: add implementation details
